k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-ogi
  labels:
    app.kubernetes.io/part-of: open-ogi
