k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: open-ogi
  labels:
    app: open-ogi-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-ogi-client
  template:
    metadata:
      labels:
        app: open-ogi-client
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: client
          image: open-ogi/client:latest
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: open-ogi
spec:
  selector:
    app: open-ogi-client
  ports:
    - port: 3200
      targetPort: 3200
